--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 ﻿<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>表白网页</title>
+    <title>对猪猪的爱</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <style type="text/css">
         @font-face {
             font-family: digit;
             src: url('digital-7_mono.ttf') format("truetype");
         } 
-<audio src="/music1.mp3" autoplay="autoplay">
+<audio src="zyddn.mp3" autoplay="autoplay">
+                    <source src="zyddn.mp3" type="audio/mp3" />
+                    <embed height="100" width="100" src="renxi.mp3" />
     </style>
     <link href="style/default.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="style/jquery.js"></script>
     <script type="text/javascript" src="style/garden.js"></script>
     <script type="text/javascript" src="style/functions.js"></script>
 </head>
-
+<!-- https://zhuanlan.zhihu.com/p/29098727 -->
 <body>
     <div id="mainDiv">
         <div id="content">
             <div id="code">
                 <p><span class="comments">/**</span><br />
                   <span class="space"/><span class="comments">*宝贝我爱你,</span><br />
-                  <span class="space"/><span class="comments">* 今天呢是，2.14情人节，特意写这个网页送给你.</span><br />
+                  <span class="space"/><span class="comments">* 今天呢是，12.25圣诞节，特意写这个网页送给你.</span><br />
                   <span class="space"/><span class="comments">*/</span><br />
-                  <span class="comments">// 只有在你的微笑里，我才有呼吸，还贪恋着你的风情</span><br />
+                  <span class="comments">// 外面风大，跟我回家</span><br />
                 <br />
-                <span class="comments">// 诱惑着你的神秘，埋葬了我的爱情，脉脉之情如一溪春水</span><br />
+                <span class="comments">// 留在我身边，远近我都接受。</span><br />
                 </p>
-                <p><span class="comments">// 快刀难斩断，随着天各一方的时间越来越长，我的思念也越来越深</span><br />
+                <p><span class="comments">// 南风过境十里春风不如你。</span><br />
                 </p>
-                <p><span class="comments">// 我很想找一个万籁俱寂的深夜或一个阳光明媚的早晨</span><br />
+                <p><span class="comments">//  可能时间刚好，你眼角带笑。</span><br />
                 <br />
                 <span class="comments">// 把许多心底的惆怅、寂寞向你倾诉。 某某，我们的故事是最感人</span><br />
                 </p>
